Samples/04. Aks/SampleAPI/Server/deploy/01.dev/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-webapi
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
  selector:
    app: sample-webapi
  type: ClusterIP
