Samples/04. Aks/SampleAPI/Server/deploy/01.dev/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-webapi
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: sampleapi.76fbf34a-0f9b-4d38-99ea-61f95d95d3e0.westeurope.aksapp.io
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service: 
                  name: sample-webapi
                  port: 
                    number: 80
